# ppk-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
example/: input.txt  tree.txt
src/: ArgumentParsing.cpp  ArgumentParsing.h  AttributeTree.cpp  AttributeTree.h  BasicTree.h  BinarySearchTree.h  Decision.cpp  Decision.h  DecisionTree.cpp  DecisionTree.h  DecisionTree.inl  ForwardList.h  Main.cpp  Record.h  TextHelper.cpp  TextHelper.h  UniquePtr.h
